--- a/index.html
+++ b/index.html
@@ -1,9 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="js/scripts.js"></script>
+    <title>Pig Latin Translator</title>
   </head>
   <body>
+    <div class="container">
+      <div class="jumbotron">
+        <h1>Pig Latin</h1>
+      </div>
+      <form>
+        <div class="form-group">
+          <label for="userInput">Enter English word or sentence :</label>
+          <input type="text" class=" form-control" name="name" id="user-string">
+        </div><!--end formgroup-->
+        <button type="submit" name="button" class="btn btn-success">Translate to Pig Latin!</button>
+      </form>
+      <div id="output">
+      </div><!--end output-->
+    </div><!--container-->
 
   </body>
 </html>
