--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h1>Pig Latin</h1>
+        <h1>Pig Latin Translator</h1>
       </div>
       <form>
         <div class="form-group">
